--- a/TenorPlay/app/src/main/res/layout/row_custom_mainscreen_adapter.xml
+++ b/TenorPlay/app/src/main/res/layout/row_custom_mainscreen_adapter.xml
@@ -24,6 +24,8 @@
                 android:paddingBottom="-7dp"
                 android:paddingRight="9dp"
                 android:text="Stairway to heaven"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="#212121"
                 android:textSize="17sp"
                 android:textStyle="normal" />
@@ -33,6 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trackTitle"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:layout_marginLeft="20dp"
                 android:paddingRight="7dp"
                 android:text="The Smithies"
